huge refactor, added rule matching and crazy awesome best UI ever
